--- a/p2_cdados.ipynb
+++ b/p2_cdados.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "[5 rows x 141 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,14 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 1726300/1726300 [06:38<00:00, 4327.92rows/s]\n"
+      "Downloading: 100%|██████████| 1726300/1726300 [07:08<00:00, 4028.92rows/s]\n"
      ]
     }
    ],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "[1726300 rows x 19 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,14 +653,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 105830/105830 [00:17<00:00, 5975.02rows/s]\n"
+      "Downloading: 100%|██████████| 105830/105830 [00:19<00:00, 5311.07rows/s]\n"
      ]
     }
    ],
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
        "[105830 rows x 9 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,14 +886,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 58/58 [00:00<00:00, 188.31rows/s]\n"
+      "Downloading: 100%|██████████| 58/58 [00:00<00:00, 165.21rows/s]\n"
      ]
     }
    ],
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
        "57  2017        4.406750"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,14 +1301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 153876/153876 [00:28<00:00, 5458.03rows/s]\n"
+      "Downloading: 100%|██████████| 153876/153876 [00:33<00:00, 4560.57rows/s]\n"
      ]
     }
    ],
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1745,7 +1745,7 @@
        "[153876 rows x 27 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1756,14 +1756,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 319681/319681 [06:29<00:00, 821.14rows/s] \n"
+      "Downloading: 100%|██████████| 319681/319681 [09:50<00:00, 541.14rows/s]\n"
      ]
     }
    ],
@@ -1775,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2161,7 +2161,7 @@
        "[319681 rows x 90 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2175,7 +2175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Para esse projeto decidimos fazer uma modelagem do número de homicidios em SP e tentar prever como esse evento atua em função de 5 features distintas. As quais são : Desemprego, nível de escolaridade, PIB, custo de vida (ICV) e o índice de vulnerabilidade social (IVC)\n",
+    "## Para esse projeto decidimos fazer uma modelagem do número de homicidios em SP e tentar prever como esse evento atua em função de 5 features distintas. As quais são : Desemprego, nível de escolaridade, PIB, custo de vida (ICV) e o índice de vulnerabilidade social (IVS)\n",
     "\n",
     "### A meta é conseguir criar um modelo satisfatório para e validá-lo com dados reais, a fim de, termos uma ideia melhor de como a criminalidade cresce no Brasil e tomarmos medidas para nos proteger"
    ]
@@ -2189,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2200,7 +2200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2330,7 +2330,7 @@
        "[153876 rows x 4 columns]"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2348,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2358,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2371,7 +2371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2467,7 +2467,7 @@
        "[1 rows x 139 columns]"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2499,7 +2499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2629,7 +2629,7 @@
        "[23028 rows x 4 columns]"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2648,7 +2648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2744,7 +2744,7 @@
        "[1 rows x 34 columns]"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2767,7 +2767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2819,7 +2819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3060,7 +3060,7 @@
        "33  10-2014  6,6"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3071,7 +3071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3080,7 +3080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3089,7 +3089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3098,7 +3098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3108,7 +3108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3250,7 +3250,7 @@
        "[23028 rows x 5 columns]"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3261,7 +3261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3270,7 +3270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3412,7 +3412,7 @@
        "[23028 rows x 5 columns]"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3423,7 +3423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3432,7 +3432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3450,7 +3450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3466,7 +3466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3475,7 +3475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3786,7 +3786,7 @@
        "33     10-2014  6.6            Araçatuba              0.0"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3799,7 +3799,150 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## Agora iremos adicionar as outras features!"
+    " ## Agora iremos adicionar as outras features!\n",
+    "\n",
+    " ### Entretando, como elas estão em datas completamente distintas, teremos que refazer o df geral, de modo que, ocorra  a maior intersecção de datas possíveis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ano</th>\n",
+       "      <th>mes</th>\n",
+       "      <th>regiao_ssp</th>\n",
+       "      <th>Homicidio_total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Presidente Prudente</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Presidente Prudente</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Presidente Prudente</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Presidente Prudente</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Presidente Prudente</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153871</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>8</td>\n",
+       "      <td>São José do Rio Preto</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153872</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>9</td>\n",
+       "      <td>São José do Rio Preto</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153873</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>10</td>\n",
+       "      <td>São José do Rio Preto</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153874</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>11</td>\n",
+       "      <td>São José do Rio Preto</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153875</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>12</td>\n",
+       "      <td>São José do Rio Preto</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>153876 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         ano  mes             regiao_ssp  Homicidio_total\n",
+       "0       2002    1    Presidente Prudente              0.0\n",
+       "1       2002    2    Presidente Prudente              0.0\n",
+       "2       2002    3    Presidente Prudente              0.0\n",
+       "3       2002    4    Presidente Prudente              0.0\n",
+       "4       2002    5    Presidente Prudente              0.0\n",
+       "...      ...  ...                    ...              ...\n",
+       "153871  2014    8  São José do Rio Preto              0.0\n",
+       "153872  2014    9  São José do Rio Preto              0.0\n",
+       "153873  2014   10  São José do Rio Preto              0.0\n",
+       "153874  2014   11  São José do Rio Preto              0.0\n",
+       "153875  2014   12  São José do Rio Preto              0.0\n",
+       "\n",
+       "[153876 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "homicidio_filtrado"
    ]
   },
   {
